foundation-objs/main/default/objects/Asset/fields/ABCDE_Static_3rd__c.field-meta.xml
<CustomField>
    <fullName>ABCDE_Static_3rd__c</fullName>
    <label>ABCDE_Static_3rd</label>
    <type>TextArea</type>
</CustomField>