foundation-objs/main/default/objects/Asset/fields/Account_ARR_Type__c.field-meta.xml
<CustomField>
    <fullName>Account_ARR_Type__c</fullName>
    <label>Account ARR Type</label>
    <length>10</length>
    <type>Text</type>
</CustomField>