foundation-objs/main/default/objects/Asset/fields/Account_CSM_Manager_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_CSM_Manager_Name__c</fullName>
    <label>Account CSM Manager Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>