foundation-objs/main/default/objects/Asset/fields/Account_CSM_Manager_Phone__c.field-meta.xml
<CustomField>
    <fullName>Account_CSM_Manager_Phone__c</fullName>
    <label>Account CSM Manager Phone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>