foundation-objs/main/default/objects/Asset/fields/Account_ID_18__c.field-meta.xml
<CustomField>
    <fullName>Account_ID_18__c</fullName>
    <formula>Account.Account_ID_18__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account ID(18)(C)</label>
    <type>Text</type>
</CustomField>