foundation-objs/main/default/objects/Asset/fields/Account_Id__c.field-meta.xml
<CustomField>
    <fullName>Account_Id__c</fullName>
    <formula>Account.Account_ID_18__c</formula>
    <label>Account Id</label>
    <type>Text</type>
</CustomField>