foundation-objs/main/default/objects/Asset/fields/Account_Name_Form_BE__c.field-meta.xml
<CustomField>
    <fullName>Account_Name_Form_BE__c</fullName>
    <formula>Account.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Name Form BE</label>
    <type>Text</type>
</CustomField>