foundation-objs/main/default/objects/Asset/fields/Account_Owner_Manager__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner_Manager__c</fullName>
    <formula>Account.Owner.Manager.FirstName&amp;&quot; &quot;&amp;Account.Owner.Manager.LastName</formula>
    <label>Account Owner: Manager</label>
    <type>Text</type>
</CustomField>