foundation-objs/main/default/objects/Asset/fields/Account_Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner_Name__c</fullName>
    <formula>Account.Owner.FirstName&amp;&quot; &quot;&amp;Account.Owner.LastName</formula>
    <label>Account Owner: Name</label>
    <type>Text</type>
</CustomField>