foundation-objs/main/default/objects/Asset/fields/Account_PAN__c.field-meta.xml
<CustomField>
    <fullName>Account_PAN__c</fullName>
    <formula>Account.PAN__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account PAN</label>
    <type>Text</type>
</CustomField>