foundation-objs/main/default/objects/Asset/fields/Activated_at_the_beginning_of_the_month__c.field-meta.xml
<CustomField>
    <fullName>Activated_at_the_beginning_of_the_month__c</fullName>
    <label>Activated at the beginning of the month</label>
    <type>TextArea</type>
</CustomField>