foundation-objs/main/default/objects/Asset/fields/Activation_and_bucket_combo__c.field-meta.xml
<CustomField>
    <fullName>Activation_and_bucket_combo__c</fullName>
    <formula>if(universe__c=TRUE,Activation_status_new__c,&quot;Out of Universe&quot;)</formula>
    <label>Activation and bucket combo</label>
    <type>Text</type>
</CustomField>