foundation-objs/main/default/objects/Asset/fields/Activation_Date__c.field-meta.xml
<CustomField>
    <fullName>Activation_Date__c</fullName>
    <description>The date when the asset got activated as per activation definition</description>
    <label>Activation Date</label>
    <type>Date</type>
</CustomField>