foundation-objs/main/default/objects/Asset/fields/Activation_Delay_Reason__c.field-meta.xml
<CustomField>
    <fullName>Activation_Delay_Reason__c</fullName>
    <label>Activation Delay Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Potential Churn / Sales return</fullName>
            </value>
            <value>
                <fullName>Customer not responding</fullName>
            </value>
            <value>
                <fullName>Integration delay - Customer</fullName>
            </value>
            <value>
                <fullName>Integration delay - Client</fullName>
            </value>
            <value>
                <fullName>QS Mapping Issue</fullName>
            </value>
            <value>
                <fullName>Limited Use Case</fullName>
            </value>
            <value>
                <fullName>Product Issue</fullName>
            </value>
            <value>
                <fullName>Will be activated by EOM</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>