foundation-objs/main/default/objects/Asset/fields/Activation_Delay_Reason_Comment__c.field-meta.xml
<CustomField>
    <fullName>Activation_Delay_Reason_Comment__c</fullName>
    <label>Activation Delay Reason Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>