foundation-objs/main/default/objects/Asset/fields/activation_flag__c.field-meta.xml
<CustomField>
    <fullName>activation_flag__c</fullName>
    <description>Flag Denoting Activation Status of the Asset (1 for Activated, 0 for Unactivated and 2 for Usage not Tracked)</description>
    <label>Activation Flag</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>