foundation-objs/main/default/objects/Asset/fields/Activation_Pending_Reasons__c.field-meta.xml
<CustomField>
    <fullName>Activation_Pending_Reasons__c</fullName>
    <label>Activation Pending Reasons</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Delay from Client-Side</fullName>
                <label>Delay from Client-Side - Others</label>
            </value>
            <value>
                <fullName>Potential Churn</fullName>
            </value>
            <value>
                <fullName>Assisted Service /  Unecops / NA</fullName>
            </value>
            <value>
                <fullName>Integration pending - Client side</fullName>
            </value>
            <value>
                <fullName>Client not reachable</fullName>
                <label>Client Not Responded</label>
            </value>
            <value>
                <fullName>Using with different email id</fullName>
                <label>QS Mapping Issue</label>
            </value>
            <value>
                <fullName>Integration pending - Clear Tax</fullName>
            </value>
            <value>
                <fullName>Customer Print Template Delay</fullName>
                <label>Delay from Client-Side - CPT</label>
            </value>
            <value>
                <fullName>Partially Using other competitor tools</fullName>
                <label>Limited Use Case</label>
            </value>
            <value>
                <fullName>Einv and EWB Sold - EWB not required by client</fullName>
            </value>
            <value>
                <fullName>Einv and EWB Sold - Einv not required  by client</fullName>
            </value>
            <value>
                <fullName>Extension agreed with Sales</fullName>
            </value>
            <value>
                <fullName>Potential Sales Return</fullName>
            </value>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>Will be successful by EOM</fullName>
            </value>
            <value>
                <fullName>Product Issue</fullName>
            </value>
            <value>
                <fullName>Non Trackable</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>Success Pending</fullName>
            </value>
            <value>
                <fullName>B2C-QR date extension post 1 July</fullName>
                <isActive>false</isActive>
                <label>B2C-QR date extension post 1st Oct</label>
            </value>
            <value>
                <fullName>Deadline Extended from govt side</fullName>
                <isActive>false</isActive>
                <label>Deadline Extended from govt side</label>
            </value>
            <value>
                <fullName>Business impacted due to COVID</fullName>
                <isActive>false</isActive>
                <label>Delay from Client-Side - Covid</label>
            </value>
            <value>
                <fullName>Delay from Client-Side - ERP</fullName>
                <isActive>false</isActive>
                <label>Delay from Client-Side - ERP</label>
            </value>
            <value>
                <fullName>Delay from Client-Side - Internal restructuring</fullName>
                <isActive>false</isActive>
                <label>Delay from Client-Side - Internal restructuring</label>
            </value>
            <value>
                <fullName>Delay from Client-Side - SPOC unavaillable</fullName>
                <isActive>false</isActive>
                <label>Delay from Client-Side - SPOC unavaillable</label>
            </value>
            <value>
                <fullName>EINV &lt;50 cr</fullName>
                <isActive>false</isActive>
                <label>EINV &lt;50 cr</label>
            </value>
            <value>
                <fullName>Extension agreed with Integration</fullName>
                <isActive>false</isActive>
                <label>Extension agreed with Integration</label>
            </value>
            <value>
                <fullName>One time yearly usage</fullName>
                <isActive>false</isActive>
                <label>GSTR9 - 2021- Post Sept</label>
            </value>
            <value>
                <fullName>Low Invoice Count</fullName>
                <isActive>false</isActive>
                <label>Low Invoice Count</label>
            </value>
            <value>
                <fullName>MS - Delivering Pending</fullName>
                <isActive>false</isActive>
                <label>MS - Delivering Pending</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>