foundation-objs/main/default/objects/Asset/fields/Activation_status_new__c.field-meta.xml
<CustomField>
    <fullName>Activation_status_new__c</fullName>
    <description>Field to identify if an asset status if it is activated or not based on the new definition.
Updated daily using the data provided from the query by analyst team.</description>
    <inlineHelpText>Field to identify if an asset status if it is activated or not based on the new definition.
Updated daily using the data provided from the query by analyst team.</inlineHelpText>
    <label>Asset Activation flag</label>
    <type>TextArea</type>
</CustomField>