foundation-objs/main/default/objects/Asset/fields/Activation_TAT_from_Po_Start_date__c.field-meta.xml
<CustomField>
    <fullName>Activation_TAT_from_Po_Start_date__c</fullName>
    <formula>Activation_Date__c-PurchaseDate</formula>
    <label>Activation TAT from Po Start date</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>