foundation-objs/main/default/objects/Asset/fields/Additional_POC_2__c.field-meta.xml
<CustomField>
    <fullName>Additional_POC_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Additional POC 2</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>(1 AND 2) AND (3 OR 4)</booleanFilter>
        <filterItems>
            <field>$Source.AccountId</field>
            <operation>equals</operation>
            <valueField>Contact.Account.Id</valueField>
        </filterItems>
        <filterItems>
            <field>Contact.Is_Communicable__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>Contact.seniority__c</field>
            <operation>equals</operation>
            <value></value>
        </filterItems>
        <filterItems>
            <field>Contact.seniority__c</field>
            <operation>equals</operation>
            <value>Senior</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Assets (Additional POC 2)</relationshipLabel>
    <relationshipName>Assets2</relationshipName>
    <type>Lookup</type>
</CustomField>