foundation-objs/main/default/objects/Asset/fields/Adjusted_Price_C__c.field-meta.xml
<CustomField>
    <fullName>Adjusted_Price_C__c</fullName>
    <formula>if( AND(ISPICKVAL( Product2.Billing_Type__c ,&quot;ARR&quot;),OR(ISBLANK( PurchaseDate ),ISNULL( UsageEndDate )),  Asset_Period_End_Start__c &gt;1.5), Price,

if( AND(ISPICKVAL( Product2.Billing_Type__c ,&quot;ARR&quot;),OR(ISBLANK( PurchaseDate ),ISNULL( UsageEndDate )),  Asset_Period_End_Start__c &lt;1.5), Price,

if( AND(ISPICKVAL( Product2.Billing_Type__c ,&quot;ARR&quot;),  Asset_Period_End_Start__c &gt;1.5), Price /Asset_Period_End_Start__c,

Price
)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Adjusted Price (C)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>