foundation-objs/main/default/objects/Asset/fields/Admin_Email_ID__c.field-meta.xml
<CustomField>
    <fullName>Admin_Email_ID__c</fullName>
    <formula>Order_Line__r.Order.Admin_Email_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Admin Email-ID</label>
    <type>Text</type>
</CustomField>