foundation-objs/main/default/objects/Asset/fields/Ageing_created_date_Base_Date__c.field-meta.xml
<CustomField>
    <fullName>Ageing_created_date_Base_Date__c</fullName>
    <formula>Base_Date__c - Opportunity_Close_Date__c</formula>
    <label>Ageing( created date- Base Date))</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>