foundation-objs/main/default/objects/Asset/fields/Ageing_of_Asset__c.field-meta.xml
<CustomField>
    <fullName>Ageing_of_Asset__c</fullName>
    <formula>If( PurchaseDate  &gt; DATEVALUE(CreatedDate)
, 

CASE(MOD(PurchaseDate - DATE(1985,6,24),7),

0 , CASE( MOD( Today() - PurchaseDate ,7),1,2,2,3,3,4,4,5,5,5,6,5,1),
1 , CASE( MOD( Today() - PurchaseDate ,7),1,2,2,3,3,4,4,4,5,4,6,5,1),
2 , CASE( MOD( Today() - PurchaseDate ,7),1,2,2,3,3,3,4,3,5,4,6,5,1),
3 , CASE( MOD( Today() - PurchaseDate ,7),1,2,2,2,3,2,4,3,5,4,6,5,1),
4 , CASE( MOD( Today() - PurchaseDate ,7),1,1,2,1,3,2,4,3,5,4,6,5,1),
5 , CASE( MOD( Today() - PurchaseDate ,7),1,0,2,1,3,2,4,3,5,4,6,5,0),
6 , CASE( MOD( Today() - PurchaseDate ,7),1,1,2,2,3,3,4,4,5,5,6,5,0),
999)
+
(FLOOR(( Today() - PurchaseDate )/7)*5)
, 

CASE(MOD(DATEVALUE(CreatedDate) - DATE(1985,6,24),7),

0 , CASE( MOD( Today() - DATEVALUE(CreatedDate) ,7),1,2,2,3,3,4,4,5,5,5,6,5,1),
1 , CASE( MOD( Today() - DATEVALUE(CreatedDate) ,7),1,2,2,3,3,4,4,4,5,4,6,5,1),
2 , CASE( MOD( Today() - DATEVALUE(CreatedDate) ,7),1,2,2,3,3,3,4,3,5,4,6,5,1),
3 , CASE( MOD( Today() - DATEVALUE(CreatedDate) ,7),1,2,2,2,3,2,4,3,5,4,6,5,1),
4 , CASE( MOD( Today() - DATEVALUE(CreatedDate) ,7),1,1,2,1,3,2,4,3,5,4,6,5,1),
5 , CASE( MOD( Today() - DATEVALUE(CreatedDate) ,7),1,0,2,1,3,2,4,3,5,4,6,5,0),
6 , CASE( MOD( Today() - DATEVALUE(CreatedDate) ,7),1,1,2,2,3,3,4,4,5,5,6,5,0),
999)
+
(FLOOR(( Today() - DATEVALUE(CreatedDate) )/7)*5)
) -1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ageing (CurrentDate - Period Start Date)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>