foundation-objs/main/default/objects/Asset/fields/Ageing_Since_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Ageing_Since_Created_Date__c</fullName>
    <formula>CASE(MOD(DATEVALUE(CreatedDate) - DATE(1985,6,24),7),

0 , CASE( MOD( Today() - DATEVALUE(CreatedDate) ,7),1,2,2,3,3,4,4,5,5,5,6,5,1),
1 , CASE( MOD( Today() - DATEVALUE(CreatedDate) ,7),1,2,2,3,3,4,4,4,5,4,6,5,1),
2 , CASE( MOD( Today() - DATEVALUE(CreatedDate) ,7),1,2,2,3,3,3,4,3,5,4,6,5,1),
3 , CASE( MOD( Today() - DATEVALUE(CreatedDate) ,7),1,2,2,2,3,2,4,3,5,4,6,5,1),
4 , CASE( MOD( Today() - DATEVALUE(CreatedDate) ,7),1,1,2,1,3,2,4,3,5,4,6,5,1),
5 , CASE( MOD( Today() - DATEVALUE(CreatedDate) ,7),1,0,2,1,3,2,4,3,5,4,6,5,0),
6 , CASE( MOD( Today() - DATEVALUE(CreatedDate) ,7),1,1,2,2,3,3,4,4,5,5,6,5,0),
999)
+
(FLOOR(( Today() - DATEVALUE(CreatedDate) )/7)*5) -1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ageing (Since Created Date)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>