foundation-objs/main/default/objects/Asset/fields/Ageing_Since_Finance_Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>Ageing_Since_Finance_Approval_Date__c</fullName>
    <formula>TODAY()-Finance_Approval_Date__c</formula>
    <label>Ageing (Since Finance Approval Date)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>