foundation-objs/main/default/objects/Asset/fields/Ageing_since_max_opp_and_po__c.field-meta.xml
<CustomField>
    <fullName>Ageing_since_max_opp_and_po__c</fullName>
    <formula>TODAY()- max_of_opportunity_or_po__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ageing (since max opp and po)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>