foundation-objs/main/default/objects/Asset/fields/Ageing_Since_OB_complete_date__c.field-meta.xml
<CustomField>
    <fullName>Ageing_Since_OB_complete_date__c</fullName>
    <formula>TODAY()- Onboarding_Completed_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ageing (Since OB complete date)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>