foundation-objs/main/default/objects/Asset/fields/Ageing_Since_Period_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Ageing_Since_Period_End_Date__c</fullName>
    <formula>TODAY() - UsageEndDate</formula>
    <label>Ageing (Since Period End Date)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>