foundation-objs/main/default/objects/Asset/fields/Ageing_Since_Period_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Ageing_Since_Period_Start_Date__c</fullName>
    <formula>If(isblank(PurchaseDate),&quot;&quot;,
if((Today()-PurchaseDate)&lt;0,&quot;&quot;,
if((Today()-PurchaseDate)&lt;=15,&quot;0 - 15 Days&quot;,
if((Today()-PurchaseDate)&lt;=30,&quot;16 - 30 Days&quot;,
if((Today()-PurchaseDate)&lt;=60,&quot;31 - 60 Days&quot;,
if((Today()-PurchaseDate)&lt;=90,&quot;60 - 90 Days&quot;,&quot;Greater than 90 Days&quot;))))))</formula>
    <label>Ageing(Since Period Start Date)</label>
    <type>Text</type>
</CustomField>