foundation-objs/main/default/objects/Asset/fields/Ageing_Till_Period_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Ageing_Till_Period_End_Date__c</fullName>
    <formula>UsageEndDate -  TODAY()</formula>
    <label>Ageing (Till Period End Date)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>