foundation-objs/main/default/objects/Asset/fields/Ageing_Usage_start_date_PO_start_date__c.field-meta.xml
<CustomField>
    <fullName>Ageing_Usage_start_date_PO_start_date__c</fullName>
    <formula>Usage_Start_Date__c - PurchaseDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ageing(Usage start date- PO start date)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>