foundation-objs/main/default/objects/Asset/fields/Aging_in_current_Stage__c.field-meta.xml
<CustomField>
    <fullName>Aging_in_current_Stage__c</fullName>
    <label>Aging in current Stage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>