foundation-objs/main/default/objects/Asset/fields/Aging_in_Stage__c.field-meta.xml
<CustomField>
    <fullName>Aging_in_Stage__c</fullName>
    <formula>TODAY() -  Project_Stage_Change_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Aging in Stage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>