foundation-objs/main/default/objects/Asset/fields/Anchor_Companys__c.field-meta.xml
<CustomField>
    <fullName>Anchor_Companys__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Anchor Company</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Assets</relationshipLabel>
    <relationshipName>AnchorChildAsset</relationshipName>
    <type>Lookup</type>
</CustomField>