foundation-objs/main/default/objects/Asset/fields/ASP_GSP_Usage_Churn__c.field-meta.xml
<CustomField>
    <fullName>ASP_GSP_Usage_Churn__c</fullName>
    <label>ASP/GSP Usage Risk</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>High Risk</fullName>
                <isActive>false</isActive>
                <label>High Risk</label>
            </value>
            <value>
                <fullName>Low Risk</fullName>
                <isActive>false</isActive>
                <label>Low Risk</label>
            </value>
            <value>
                <fullName>No Risk</fullName>
                <isActive>false</isActive>
                <label>No Risk</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>