foundation-objs/main/default/objects/Asset/fields/Asset_created__c.field-meta.xml
<CustomField>
    <fullName>Asset_created__c</fullName>
    <formula>License_ID__c !=&apos;&apos;</formula>
    <label>Asset auto-created</label>
    <type>Checkbox</type>
</CustomField>