foundation-objs/main/default/objects/Asset/fields/Asset_Creation_date_PO_start_date__c.field-meta.xml
<CustomField>
    <fullName>Asset_Creation_date_PO_start_date__c</fullName>
    <label>Asset Creation date &gt;PO start date</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>