foundation-objs/main/default/objects/Asset/fields/Asset_ID_18__c.field-meta.xml
<CustomField>
    <fullName>Asset_ID_18__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Asset ID (18)</label>
    <type>Text</type>
</CustomField>