foundation-objs/main/default/objects/Asset/fields/Asset_opportunity_Type__c.field-meta.xml
<CustomField>
    <fullName>Asset_opportunity_Type__c</fullName>
    <label>Asset_opportunity Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Channel Partner</fullName>
            </value>
            <value>
                <fullName>Cross Sell/Upsell</fullName>
            </value>
            <value>
                <fullName>ITR</fullName>
            </value>
            <value>
                <fullName>Net New</fullName>
            </value>
            <value>
                <fullName>Partner Success</fullName>
            </value>
            <value>
                <fullName>Renewal</fullName>
            </value>
            <value>
                <fullName>Winback</fullName>
            </value>
            <value>
                <fullName>Upsell</fullName>
            </value>
            <value>
                <fullName>International</fullName>
            </value>
            <value>
                <fullName>Net New - ID</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>