foundation-objs/main/default/objects/Asset/fields/Asset_Period_End_Start__c.field-meta.xml
<CustomField>
    <fullName>Asset_Period_End_Start__c</fullName>
    <formula>if(OR(ISBLANK( UsageEndDate ),ISBLANK( PurchaseDate),(UsageEndDate -PurchaseDate)=0),1,(UsageEndDate -PurchaseDate)/365)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Asset Period(End-Start)(Rounded)</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>