foundation-objs/main/default/objects/Asset/fields/Asset_risk_status_beginning_of_the_month__c.field-meta.xml
<CustomField>
    <fullName>Asset_risk_status_beginning_of_the_month__c</fullName>
    <label>Asset risk status beginning of the month</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>