foundation-objs/main/default/objects/Asset/fields/Asset_success_flag__c.field-meta.xml
<CustomField>
    <fullName>Asset_success_flag__c</fullName>
    <label>Asset success flag</label>
    <type>TextArea</type>
</CustomField>