foundation-objs/main/default/objects/Asset/fields/Asset_Type__c.field-meta.xml
<CustomField>
    <fullName>Asset_Type__c</fullName>
    <label>Asset Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Managed Service</fullName>
            </value>
            <value>
                <fullName>Products</fullName>
            </value>
            <value>
                <fullName>Integration</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>