foundation-objs/main/default/objects/Asset/fields/assigned_start_of_month_for_Activation__c.field-meta.xml
<CustomField>
    <fullName>assigned_start_of_month_for_Activation__c</fullName>
    <label>assigned start of month for Activation</label>
    <type>Date</type>
</CustomField>