foundation-objs/main/default/objects/Asset/fields/Auto_Retry__c.field-meta.xml
<CustomField>
    <fullName>Auto_Retry__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Auto Retry</label>
    <type>Checkbox</type>
</CustomField>