foundation-objs/main/default/objects/Asset/fields/Awaiting_Kick_Off_date_for_flow__c.field-meta.xml
<CustomField>
    <fullName>Awaiting_Kick_Off_date_for_flow__c</fullName>
    <label>Awaiting Kick Off date for flow</label>
    <type>Date</type>
</CustomField>