foundation-objs/main/default/objects/Asset/fields/BackEndQuote__c.field-meta.xml
<CustomField>
    <fullName>BackEndQuote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BackEndQuote</label>
    <referenceTo>Quote</referenceTo>
    <relationshipLabel>Assets</relationshipLabel>
    <relationshipName>Assets</relationshipName>
    <type>Lookup</type>
</CustomField>