foundation-objs/main/default/objects/Asset/fields/BackEndQuoteDiscount__c.field-meta.xml
<CustomField>
    <fullName>BackEndQuoteDiscount__c</fullName>
    <formula>0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BackEndQuoteDiscount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>