foundation-objs/main/default/objects/Asset/fields/Base_Date__c.field-meta.xml
<CustomField>
    <fullName>Base_Date__c</fullName>
    <label>Base Date</label>
    <type>Date</type>
</CustomField>