foundation-objs/main/default/objects/Asset/fields/Billed_Upto__c.field-meta.xml
<CustomField>
    <fullName>Billed_Upto__c</fullName>
    <label>Billed Upto</label>
    <type>Date</type>
</CustomField>