foundation-objs/main/default/objects/Asset/fields/Billing_Frequency_for_Integration_Prods__c.field-meta.xml
<CustomField>
    <fullName>Billing_Frequency_for_Integration_Prods__c</fullName>
    <label>Billing Frequency for Integration Prods</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>100% Advance</fullName>
            </value>
            <value>
                <fullName>50% Go Live</fullName>
            </value>
            <value>
                <fullName>50% Upfront</fullName>
            </value>
            <value>
                <fullName>Custom</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>