foundation-objs/main/default/objects/Asset/fields/Billing_Frequency_for_Service_Fee_OTP__c.field-meta.xml
<CustomField>
    <fullName>Billing_Frequency_for_Service_Fee_OTP__c</fullName>
    <label>Billing Frequency for Service Fee (OTP)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>100 percent in advance</fullName>
            </value>
            <value>
                <fullName>50 percent in advance on signing Order Form and balance after completion of Set-up</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>