foundation-objs/main/default/objects/Asset/fields/Billing_Frequency_for_Subscription_Fee__c.field-meta.xml
<CustomField>
    <fullName>Billing_Frequency_for_Subscription_Fee__c</fullName>
    <label>Billing Frequency for Subscription Fee</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Half-yearly in advance</fullName>
            </value>
            <value>
                <fullName>Half-yearly in end (Approval Driven)</fullName>
            </value>
            <value>
                <fullName>Monthly in advance</fullName>
            </value>
            <value>
                <fullName>Monthly in end (Approval Driven)</fullName>
            </value>
            <value>
                <fullName>Quarterly in advance</fullName>
            </value>
            <value>
                <fullName>Quarterly in end (Approval Driven)</fullName>
            </value>
            <value>
                <fullName>Yearly in advance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>